--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -37,5 +37,17 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:text="@string/latte_title"/>
+        <TextView
+                android:id="@+id/matcha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/matcha_latte_title"/>
+        <TextView
+                android:id="@+id/caramel_macchiato"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="@string/caramel_macchiato_title"/>
     </LinearLayout>
 </ScrollView>
